# xrender

./: .clang-format  CMakeLists.txt  README.md  imgui.ini
Assets/Engine/: IBL_BRDF.ktx  lutBRDF.ktx
Assets/GLShader/: screen.vs
Assets/Models/cerberus/: cerberus.gltf
Assets/Textures/CubeTextures/PreIrradiance0/: nx.ktx  ny.ktx  nz.ktx  px.ktx  py.ktx  pz.ktx
Assets/Textures/CubeTextures/SkyBox0/: nx.ktx  ny.ktx  nz.ktx  px.ktx  py.ktx  pz.ktx
Assets/Textures/CubeTextures/skybox4/: nx.ktx  ny.ktx  nz.ktx  px.ktx  py.ktx  pz.ktx
Assets/Textures/hdr/: irradianceMap.hdr
Sources/: CMakeLists.txt
Sources/Runtime/: CMakeLists.txt  Camera.h  Light.h  Main.cpp  MeshProxy.cpp  MeshProxy.h  RTRender.cpp  RTRender.h  Raytracer.cpp  Raytracer.h  RenderScene.cpp  RenderScene.h  Tools.cpp  Tools.h  Types.cpp  Types.h  VertexBuffer.cpp  VertexBuffer.h  XRenderer.cpp  XRenderer.h
Sources/Runtime/Graphics/: Material.cpp  Material.h  PhysicalImage.cpp  PhysicalImage.h  Prefilter.cpp  Prefilter.h  RxImage.cpp  RxImage.h  RxSampler.cpp  RxSampler.h  Texture.cpp  Texture.h
Sources/Runtime/Loader/: GLTFLoader.cpp  GLTFLoader.h  ImageLoader.cpp  ImageLoader.h
Sources/Runtime/Meshes/: Geometry.cpp  Geometry.h
Sources/Runtime/Object/: Component.cpp  Component.h  Entity.cpp  Entity.h  MeshComponent.cpp  MeshComponent.h  Model.cpp  Model.h
Sources/Runtime/PathTracer/: PathTracing.cpp  PathTracing.h  PhotonMapping.cpp  PhotonMapping.h  Raytracer.cpp  Raytracer.h
Sources/Runtime/Renderer/: PBRRender.cpp  PBRRender.h  PBRShader.cpp  PBRShader.h  ShadingBase.cpp  ShadingBase.h
Sources/Runtime/Utils/: FileSystem.cpp  FileSystem.h  TimeProfiler.h
Sources/Runtime/glm/detail/: setup.hpp
