CMAKE_MINIMUM_REQUIRED(VERSION 3.15) 

PROJECT(RxRayTracing) 
set(CMAKE_CXX_STANDARD  20)

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)
#link_directories()

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include)
#include_directories()

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/Sources)
